# django-covid19

./: .gitignore  CNAME  LICENSE  MANIFEST.in  README.md  db.sqlite3  index.html  manage.py  requirements.txt  setup.cfg  setup.py  tox.ini
covid19/: settings.py  urls.py  wsgi.py
demo/: index.html
demo/css/: app.css
demo_proj/: manage.py  requirements.txt
demo_proj/ncov/: settings.py  urls.py  wsgi.py
django_covid19/: __init__.py  admin.py  apps.py  filters.py  models.py  serializers.py  settings.py  signals.py  tests.py  urls.py  views.py
django_covid19/data/: CountryCodes.csv  CountryCodes.json  CountryRegionCodes.csv  CountryRegionCodes.json
django_covid19/fixtures/: city.json  initial_data.json  province.json  statistics.json
django_covid19/locale/zh_Hans/LC_MESSAGES/: django.po
django_covid19/management/commands/: crawl.py  import_crc.py
django_covid19/migrations/: 0001_initial.py
django_covid19/spider/nCoV/: items.py  pipelines.py  settings.py
django_covid19/spider/nCoV/spiders/: c1p3a.py  covidtracking.py  dxy.py
docs/: README.md  index.html
ncovapi/: admin.py  apps.py  cron.py  filters.py  models.py  serializers.py  signals.py  urls.py  views.py
ncovapi/migrations/: 0001_initial.py  0002_auto_20200410_0810.py  0003_auto_20200410_0842.py  0004_auto_20200410_0853.py  0005_auto_20200410_0906.py  0006_auto_20200410_0920.py  0007_auto_20200410_0923.py  0008_auto_20200410_0925.py  0009_city.py  0010_auto_20200410_0949.py  0011_auto_20200410_1316.py  0012_auto_20200410_1332.py  0013_auto_20200410_1337.py  0014_auto_20200410_1343.py  0015_auto_20200411_0737.py
spider/: scrapy.cfg
spider/COVID19/: items.py  middlewares.py  pipelines.py  settings.py
spider/COVID19/spiders/: dxy.py
spider/data/: city.json  country.json  province.json
spider/data/cities/: 七台河.json  万宁.json  万州区.json  万盛经开区.json  三亚.json  三明.json  三门峡.json  上饶.json  东丽区.json  东城区.json  东方.json  东莞.json  两江新区.json  中卫.json  中山.json  丰台区.json  丰都县.json  临夏.json  临汾.json  临沂.json  临沧.json  临高.json  丹东.json  丽水.json  丽江.json  乌兰察布.json  乌海市.json  乌鲁木齐.json  乐东.json  乐山.json  九江.json  九龙坡区.json  云阳县.json  亳州.json  仙桃.json  伊春.json  伊犁州.json  佛山.json  佳木斯.json  保亭.json  (+382 more)
spider/data/countries/: 不丹.json  东帝汶.json  中国.json  中非共和国.json  丹麦.json  乌克兰.json  乌兹别克斯坦.json  乌干达.json  乌拉圭.json  乍得.json  也门共和国.json  亚美尼亚.json  以色列.json  伊拉克.json  伊朗.json  伯利兹.json  佛得角.json  俄罗斯.json  保加利亚.json  克罗地亚.json  关岛.json  冈比亚.json  冰岛.json  几内亚.json  几内亚比绍.json  列支敦士登.json  刚果（布）.json  刚果（金）.json  利比亚.json  利比里亚.json  加拿大.json  加纳.json  加蓬.json  匈牙利.json  北马其顿.json  北马里亚纳群岛联邦.json  南苏丹.json  南非.json  博茨瓦纳.json  卡塔尔.json  (+172 more)
spider/data/provinces/: 上海市.json  云南省.json  内蒙古自治区.json  北京市.json  台湾.json  吉林省.json  四川省.json  天津市.json  宁夏回族自治区.json  安徽省.json  山东省.json  山西省.json  广东省.json  广西壮族自治区.json  新疆维吾尔自治区.json  江苏省.json  江西省.json  河北省.json  河南省.json  浙江省.json  海南省.json  湖北省.json  湖南省.json  澳门.json  甘肃省.json  福建省.json  西藏自治区.json  贵州省.json  辽宁省.json  重庆市.json  陕西省.json  青海省.json  香港.json  黑龙江省.json
spider/nCoV/: items.py  middlewares.py  pipelines.py  settings.py
spider/nCoV/spiders/: dxy.py
