[metadata]
name = django_covid19
version = 0.4b1
description = An django app of the covid-19 API in countries around the world, provinces and cities in China, and states in the USA. 
long_description = file: README.md
long-description-content-type = text/markdown
url = https://github.com/leafcoder/django-covid19
author = leafcoder
author_email = leafcoder@gmail.com
license = MIT
keywords = python django covid19 2019-ncov app
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
