[metadata]
name = django_covid19
version = 0.4rc1
description = A django app of covid-19 API in countries around the world, provinces and cities in China, and states in the USA.
long_description = file: README.md
long-description-content-type = text/markdown
url = https://github.com/leafcoder/django-covid19
author = leafcoder
author_email = leafcoder@gmail.com
license = MIT
license_file = LICENSE
keywords = python django covid19 2019-ncov app
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: Chinese (Simplified)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find:
